src/objects/vlocity_ins__OperatingHoursEntry__c.object
<CustomObject>
    <description>Operating hours entries define the standard, holiday or exceptional open and closing times defined for the parent operating hours schedule.</description>
    <fields>
        <fullName>vlocity_ins__ClosedFromTime__c</fullName>
        <label>Closed From</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ClosedToTime__c</fullName>
        <label>Closed To</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__EffectiveEndDate__c</fullName>
        <label>Effective End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__EffectiveStartDate__c</fullName>
        <label>Effective Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ExceptionDaysOfTheWeek__c</fullName>
        <label>Days of the Week</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sunday</fullName>
                </value>
                <value>
                    <fullName>Monday</fullName>
                </value>
                <value>
                    <fullName>Tuesday</fullName>
                </value>
                <value>
                    <fullName>Wednesday</fullName>
                </value>
                <value>
                    <fullName>Thursday</fullName>
                </value>
                <value>
                    <fullName>Friday</fullName>
                </value>
                <value>
                    <fullName>Saturday</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__FridayClosingTime__c</fullName>
        <defaultValue>&quot;5:00 PM&quot;</defaultValue>
        <label>Friday Closing Time</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__FridayOpeningTime__c</fullName>
        <defaultValue>&quot;9:00 AM&quot;</defaultValue>
        <label>Friday Opening Time</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__GlobalKey__c</fullName>
        <description>The globally unique identifier of the matrix row. Used to identify the matrix row across Salesforce instances.</description>
        <externalId>true</externalId>
        <label>Global Key</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__HolidayDate__c</fullName>
        <label>Holiday</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsActive__c</fullName>
        <formula>IF( RecordType.Name = &apos;Standard&apos;, AND(vlocity_ins__EffectiveStartDate__c  &lt;=  TODAY(), OR(TODAY()  &lt;= vlocity_ins__EffectiveEndDate__c, ISBLANK(vlocity_ins__EffectiveEndDate__c))),  IF( AND (NOT(ISBLANK(vlocity_ins__HolidayDate__c)),vlocity_ins__HolidayDate__c = TODAY())  ,true,  IF(AND(vlocity_ins__EffectiveStartDate__c  &lt;=  TODAY(),  OR(TODAY() &lt;= vlocity_ins__EffectiveEndDate__c, ISBLANK(vlocity_ins__EffectiveEndDate__c))), true, false) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__MondayClosingTime__c</fullName>
        <defaultValue>&quot;5:00 PM&quot;</defaultValue>
        <label>Monday Closing Time</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__MondayOpeningTime__c</fullName>
        <defaultValue>&quot;9:00 AM&quot;</defaultValue>
        <label>Monday Opening Time</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__OpenFromTime__c</fullName>
        <label>Open From</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__OpenToTime__c</fullName>
        <label>Open To</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__OperatingHoursId__c</fullName>
        <label>Operating Hours</label>
        <referenceTo>vlocity_ins__OperatingHours__c</referenceTo>
        <relationshipName>OperatingHoursEntry</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__SaturdayClosingTime__c</fullName>
        <defaultValue>&quot;5:00 PM&quot;</defaultValue>
        <label>Saturday Closing Time</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__SaturdayOpeningTime__c</fullName>
        <defaultValue>&quot;9:00 AM&quot;</defaultValue>
        <label>Saturday Opening Time</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__SundayClosingTime__c</fullName>
        <defaultValue>&quot;5:00 PM&quot;</defaultValue>
        <label>Sunday Closing Time</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__SundayOpeningTime__c</fullName>
        <defaultValue>&quot;9:00 AM&quot;</defaultValue>
        <label>Sunday Opening Time</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ThursdayClosingTime__c</fullName>
        <defaultValue>&quot;5:00 PM&quot;</defaultValue>
        <label>Thursday Closing Time</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ThursdayOpeningTime__c</fullName>
        <defaultValue>&quot;9:00 AM&quot;</defaultValue>
        <label>Thursday Opening Time</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__TuesdayClosingTime__c</fullName>
        <defaultValue>&quot;5:00 PM&quot;</defaultValue>
        <label>Tuesday Closing Time</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__TuesdayOpeningTime__c</fullName>
        <defaultValue>&quot;9:00 AM&quot;</defaultValue>
        <label>Tuesday Opening Time</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__WednesdayClosingTime__c</fullName>
        <defaultValue>&quot;5:00 PM&quot;</defaultValue>
        <label>Wednesday Closing Time</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__WednesdayOpeningTime__c</fullName>
        <defaultValue>&quot;9:00 AM&quot;</defaultValue>
        <label>Wednesday Opening Time</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Operating Hours and Exceptions</label>
    <nameField>
        <label>Entry Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Operating Hours and Exceptions</pluralLabel>
    <recordTypes>
        <fullName>vlocity_ins__Exception</fullName>
        <active>true</active>
        <label>Exception</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_ins__Standard</fullName>
        <active>true</active>
        <label>Standard</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>